--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,17 @@
   <title>OpenAI Quickstart</title>
   <link
     rel="shortcut icon"
-    href="{{ url_for('static', filename='dog.png') }}"
+    href="{{ url_for('static', filename='Tokeshicom-270-72.png') }}"
   />
   <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" />
 </head>
 
 <body>
-  <img src="{{ url_for('static', filename='dog.png') }}" class="icon" />
-  <h3>Name my pet</h3>
+  <img src="{{ url_for('static', filename='Tokeshicom-270-72.png') }}" class="icon" />
+  <h3>Ask a question:</h3>
   <form action="/" method="post">
-    <input type="text" name="animal" placeholder="Enter an animal" required />
-    <input type="submit" value="Generate names" />
+    <input type="text" name="animal" placeholder="Ask a question" required />
+    <input type="submit" value="Generate answer" />
   </form>
   {% if result %}
   <div class="result">{{ result }}</div>
